# picoframe

./: .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  README.md  package.json  tsconfig.base.json  tsconfig.json
apps/demo/: components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/demo/src/: app.plugins.ts  demo-extras.tsx  index.css  main.tsx
apps/demo/src-tauri/: Cargo.toml  tauri.conf.json
apps/demo/src-tauri/capabilities/: default.json  hello.json  prdownloader.json
apps/demo/src-tauri/icons/: icon.icns
apps/demo/src-tauri/src/: main.rs
apps/demo/src/components/ui/: select.tsx
crates/picoframe-core/: Cargo.toml
crates/picoframe-core/src/: lib.rs  mouse_nav.rs
crates/tauri-plugin-picoframe-hello/: Cargo.toml  build.rs
crates/tauri-plugin-picoframe-hello/permissions/: default.toml
crates/tauri-plugin-picoframe-hello/permissions/autogenerated/: reference.md
crates/tauri-plugin-picoframe-hello/permissions/autogenerated/commands/: hello_greet.toml
crates/tauri-plugin-picoframe-hello/permissions/schemas/: schema.json
crates/tauri-plugin-picoframe-hello/src/: lib.rs
crates/tauri-plugin-picoframe-prdownloader/: Cargo.toml  README.md  build.rs
crates/tauri-plugin-picoframe-prdownloader/permissions/: default.toml
crates/tauri-plugin-picoframe-prdownloader/permissions/autogenerated/: reference.md
crates/tauri-plugin-picoframe-prdownloader/permissions/autogenerated/commands/: prd_download.toml  prd_repos.toml  prd_version.toml  prd_versions.toml
crates/tauri-plugin-picoframe-prdownloader/permissions/schemas/: schema.json
crates/tauri-plugin-picoframe-prdownloader/src/: lib.rs  rapid.rs  sidecar.rs
docs/superpowers/plans/: 2026-07-01-general-persistent-store.md
docs/superpowers/specs/: 2026-06-24-settings-and-side-drawers-design.md  2026-07-01-general-persistent-store-design.md
plugins/hello/: package.json
plugins/hello/src/: bindings.ts  index.ts
plugins/hello/src/pages/: HelloPage.tsx  HelloSettings.tsx
plugins/hello/src/slots/: TopBarGreeting.tsx
plugins/prdownloader/: package.json
plugins/prdownloader/src/: bindings.ts  index.ts
plugins/prdownloader/src/pages/: ExplorerPage.tsx
scripts/: setup-prdownloader-macos.sh
