[package]
name = "picoframe-core"
version = "0.0.1"
description = "Core types and the base frame plugin for picoframe Tauri apps"
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

# macOS-only: native NSEvent monitor that emits `mouse-nav` for the X1/X2 mouse
# buttons, which WKWebView does not deliver to the DOM (unlike Windows/Linux).
[target.'cfg(target_os = "macos")'.dependencies]
objc2 = "0.6"
objc2-app-kit = { version = "0.3", features = ["NSEvent", "NSResponder"] }
block2 = "0.6"
