[package]
name = "tauri-plugin-picoframe-prdownloader"
version = "0.0.1"
description = "pr-downloader sidecar plugin for picoframe (Rust half). ACL identifier: picoframe-prdownloader"
edition.workspace = true
license.workspace = true
repository.workspace = true
# Tauri requires `links` to equal `package.name`. The ACL identifier is this
# name with the `tauri-plugin-` prefix stripped -> `picoframe-prdownloader`.
links = "tauri-plugin-picoframe-prdownloader"

[build-dependencies]
tauri-plugin = { workspace = true, features = ["build"] }

[dependencies]
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
picoframe-core = { workspace = true }
# Rapid-repo browsing: fetch gzipped index files over HTTPS and inflate them.
# rustls-tls avoids an OpenSSL build dependency across platforms.
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
flate2 = "1"
